# SiMpleFileSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  bitmap.h  common.h  dirOps.c  fileOps.c  fs.c  inodeOps.c  mkfs.c  setall.sh  simplefilesystem.c  superOps.c  undoall.sh
